0.6-devel
    + Added dimension filter icons (shortcuts) to info pieces.
    + Fixed bug causing wrong hierarchy name to be displayed
    + Added the dimensionfilter plugin, which introduces a
      more advanced filtering interface.
    + Sort order in tables is now preserved.
    + Added column chooser for Explore mode, saved with view.
    + Column widths saved with view via new plugin.
    + Added tooltips to table values.
    + Added wiki plugin for public notes for cubes and views.
    + Menu buttons now require click to activate.
    + Fixed a few UI glitches. 
0.5
    + Removed the "global shared views" concept.
    + Experimental Cubes proxy (with ACLs).
    + Initial version of cache system.
    + Measure aggregations are now shown in submenus.
    + Fixed bug causing drilldowns to incorrectly drill to latest level.
    + Changed "loading" approach, now blocks the interface where appropriate.
    + Changed redraw strategy trying to minimize size changes.
    + Fixed wrong extra columns in some charts.
    + Fixed multiple drill dimensions that were ignored in charts.
0.4
    + Added a locale switcher plugin.
    + Added documentation and examples for embedding views
      in other web applications.
    + Added the serialization plugin.
0.3
    + Added undo/redo plugin.
    + Improved export plugin (now exports all pages of tables).
    + Updated Flotr2 library to support stacked lines.
    + Date dimensions are now correctly configured at model level.
    + Added support for dimension hierarchies.
    + Added some Cubes model javascript support classes.
    + Added support for labels and label attributes.
    + Added (draft) examples of local HTML usage.
    + Added installation documentation.
    + Application settings now have default values that work out of the box.
    + Added support for measures with no aggregations.
0.2
    + Initial import into repository.
    + Added basic saving/sharing capabilities.
    + Initial separation of components.