@@ -27,6 +27,7 @@
 <script type="text/javascript" src="{{ STATIC_URL }}js/cubesviewer/cubesviewer.views.cube.explore.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/cubesviewer/cubesviewer.views.cube.series.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/cubesviewer/cubesviewer.views.cube.chart.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/cubesviewer/cubesviewer.views.cube.facts.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/cubesviewer/cubesviewer.views.cube.dimensionfilter.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/cubesviewer/cubesviewer.views.cube.columns.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/cubesviewer/cubesviewer.views.cube.export.js"></script>
