@@ -1,4 +1,5 @@
 0.6-devel
+    + Added facts view (and support for column size saving).
     + Added dimension filter icons (shortcuts) to info pieces.
     + Fixed bug causing wrong hierarchy name to be displayed
     + Added the dimensionfilter plugin, which introduces a
